Fix button height glitch on mobile

--- a/css/hero.css
+++ b/css/hero.css
@@ -99,13 +99,16 @@
   height: 100%;
   background-color: var(--dark-color);
   color: #fff;
-  padding: 0.6em 1.5em;
+  padding: 0.6em 0;
   transition: color 0.3s, background-color 0.3s;
 }
 @media screen and (max-width: 768px) {
   #application-links a,
   #application-overlay > p {
     font-size: 0.8rem;
+  }
+  #application-links a{
+    padding: calc(0.6em + 0.1rem) 0;
   }
 }
 #application-links a:hover {
